# Cliptionary

./: .gitignore  README.md  cliptionary.js  index.html  package-lock.json  package.json  printClipboard.js  watchClipboard.js
webscraper/: Cargo.toml
