[package]
name = "webscraper"
version = "0.1.0"
authors = ["Voovs Selin <Voovs.13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["macros", "rt"] }
select = "0.5"
